--- a/tesla-aprs/config.yaml
+++ b/tesla-aprs/config.yaml
@@ -1,7 +1,7 @@
 name: "Tesla APRS"
 description: "Sends Tesla vehicle location and status to the APRS-IS"
 url: https://github.com/nonoo/ha-addons/tree/main/tesla-aprs
-version: "1.0.0"
+version: "1.0.1"
 slug: "tesla_aprs"
 init: false
 arch:
@@ -18,3 +18,5 @@ schema:
   message: str?
   interval_sec: int?
   vehicle_nr: int?
+  aprs_symbol_table_char: str?
+  aprs_symbol_code_char: str?
